# soprano

./: .gitignore  ONNX_EXPORT_GUIDE.md  PROJECT_COMPONENTS.md  QUICKSTART.md  README.md  SOPRANO_README.md  api_server.py  app.py  pyproject.toml  run_soprano_tts.py  soprano_cpu_inference.py
examples/: README.md  api_client_example.py  api_example.py  usage_example.py
soprano/: api.py  flashsr_upsampler.py  server.py  text_processing.py  tts.py
soprano/backends/: onnx_backend.py
soprano/export/: __init__.py  decoder_export.py  lm_step_export.py
soprano/static/: index.html
