[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soprano-tts"
version = "0.0.2"
authors = [
  { name="ekwek1", email="eugene.kwek.1@gmail.com" },
]
description = "Soprano: Instant, Ultra‑Realistic Text‑to‑Speech"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "lmdeploy",
  "torch",
  "unidecode",
  "scipy",
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "inflect>=7.0.0",
  "librosa>=0.10.0",
  "pydub>=0.25.0",
  "numpy>=1.24.0"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/ekwek1/soprano"
Issues = "https://github.com/ekwek1/soprano/issues"

[project.scripts]
soprano-server = "soprano.server:main"